@@ -93,7 +93,7 @@ class ChooseLinesAddBlankTests {
 		problem.setTitle("Test Title");
 		problem.setDescription("Test Description");
 		problem.setSourceCode("test.py");
-		problem.setSourceCodeLines(List.of(new String("Hello")));
+		problem.setSourceCodeLines(Arrays.asList("Hello"));
 		problem.setAnnotations(Arrays.asList(31, 13, 45));
 		problem.setLmsTarget(LmsTarget.Canvas);
 		problem.setProblemType(ProblemType.FillInTheBlank);
